--- a/Client/src/app/Mycomponents/navbar/navbar.component.css
+++ b/Client/src/app/Mycomponents/navbar/navbar.component.css
@@ -1,11 +1,14 @@
 .container{
     border-bottom: 1px solid rgb(98, 97, 97);
+    display: flex;
+    justify-content: space-between;
 }
 .nav{
     display: flex;
     justify-content:left;
     align-items: center;
     gap:3rem;
+    flex:50%;
 }
 a{
     color: black;
@@ -15,4 +18,10 @@ a{
 a:hover{
     font-weight: 700;
     text-decoration: underline;
+}
+.btn-container{
+    flex:50%;
+    display: flex;
+    justify-content: right;
+    gap:15px;
 }
